# crxml

./: .gitignore  LICENSE  README.md  benchmarks.py  pyproject.toml  spec.md  upload.sh  zensical.toml
docs/: architecture.md  changelog.md  django.md  fastapi.md  flask.md  getting-started.md  index.md  installation.md  performance.md  rust-core.md
docs/api/: index.md
docs/stylesheets/: extra.css
docs/usage/: basic.md  branching.md  custom-stages.md  index.md  parallel.md  pipeline.md  sinks.md  stages.md
src/crxml/: __init__.py  fusion.py  parallel.py  pipeline.py  sinks.py  source.py
src/crxml/stages/: __init__.py  cast.py  drop.py  filter.py  rename.py
src/crxml_core/: Cargo.toml
src/crxml_core/src/: lib.rs
tests/: conftest.py  test_integration.py  test_pipeline.py  test_sinks.py  test_source.py  test_stages.py
